--- a/chat.html
+++ b/chat.html
@@ -16,6 +16,9 @@
 </head>
 <body>
 
+<body style="background: url('https://img.pikbest.com/origin/09/28/35/25KpIkbEsTf4R.jpg!w700wp') no-repeat center center fixed; background-size: cover;">
+  <!-- Rest of your page... -->
+</body>
 
 
 
