--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
   <!-- Chat Container (Full-screen) -->
   <div id="chatbotContainer" class="chatbot-container active">
     <div class="chat-header">
-      <span>AskBot 💬</span>
+      <span>AskBot 🤖</span>
       <i id="minimizeChat" class="fas fa-minus-circle"></i>
     </div>
     <div id="chatbotMessages" class="chatbot-messages"></div>
